Update to new Rust version, fix AST structure, update dependencies